# EgoLocalization

./: .gitignore  README.md
src/IMU2Odometry/: CMakeLists.txt  package.xml
src/IMU2Odometry/include/IMU2Odometry/: imu_to_odometry.hpp
src/IMU2Odometry/src/: imu_to_odometry.cpp
src/IMU_GPS_Fusion/: CMakeLists.txt  package.xml
src/IMU_GPS_Fusion/include/IMU_GPS_Fusion/: gps_processor.hpp  imu_gps_base_type.hpp
src/IMU_GPS_Fusion/src/: imu_gps_fusion.cpp
